--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.moviesApp'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.moviesApp"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -56,6 +56,10 @@ dependencies {
     implementation "androidx.compose.ui:ui:1.3.3"
     implementation "androidx.compose.ui:ui-tooling-preview:1.3.3"
     implementation 'androidx.compose.material:material:1.3.1'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
